--- a/sass/modules/_wxt.scss
+++ b/sass/modules/_wxt.scss
@@ -51,6 +51,9 @@
   .wb-srch-multi {
     padding-top: 1em;
   }
+  #wb-tphp {
+    position: relative;
+  }
 }
 
 .theme-wet-boew {
@@ -61,6 +64,9 @@
   }
   #edit-submit-container {
     width: inherit !important;
+  }
+  #wb-tphp {
+    position: relative;
   }
 }
 
